# APP_SERVICE

./: .gitignore  README.md
csharp/backend/: .dockerignore  CsharpApp.csproj  Dockerfile  Program.cs  Readme.md  appsettings.json  docker-compose.yml
csharp/frontend/: package-lock.json  package.json  tsconfig.json
golang/backend/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  docker-compose.yml  entrypoint.sh  go.mod  main.go  nginx.conf
golang/frontend/: package.json
java/backend/: .dockerignore  DEPLOY.md  Dockerfile  docker-compose.yml  pom.xml
nodejs/backend/: .dockerignore  DEPLOY.md  Dockerfile  docker-compose.yml  package.json  tsconfig.json
php/frontend/: README.md
rust/backend/: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  docker-compose.yml
rust/backend/bash/: nginx.conf  service-platform.service
rust/backend/migrations/: 20260624000001_create_users.sql  20260624000002_create_lead_requests.sql
rust/backend/src/: main.rs  state.rs
rust/backend/src/controller/: auth_controller.rs  health_controller.rs  lead_request_controller.rs  mod.rs  user_controller.rs
rust/backend/src/dto/: auth_dto.rs  lead_request_dto.rs  mod.rs
rust/backend/src/error/: mod.rs
rust/backend/src/middleware/: auth.rs  logging.rs  mod.rs
rust/backend/src/model/: lead_request.rs  mod.rs  user.rs
rust/backend/src/repository/: lead_request_repository.rs  mod.rs  user_repository.rs
rust/backend/src/service/: auth_service.rs  lead_request_service.rs  mod.rs  user_service.rs
unsed former /: InMemoryStore.java  Inmemorystore
(+170 files in other folders)
